--- a/A_Beginner_1/04. Operators and Delimiters.ipynb
+++ b/A_Beginner_1/04. Operators and Delimiters.ipynb
@@ -6,20 +6,10 @@
    "source": [
     "# 4.1 [Operators](https://docs.python.org/3.5/reference/lexical_analysis.html#operators)\n",
     "\n",
-    "There are various operators available in Python. Operators usually come in symbols but in Python, there are also operators that come in words. Let's take a look at some common operators."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 4.1.1 Arithmetic Operators"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "There are various operators available in Python. Operators usually come in symbols but in Python, there are also operators that come in words. Let's take a look at some common operators.\n",
+    "\n",
+    "## 4.1.1 Arithmetic Operators\n",
+    "\n",
     "### ( `+` ) addition\n",
     "\n",
     "Adds values on either side of the operator. "
@@ -171,13 +161,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Beginner_1](./images/img_floor_division_2.x.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "![Beginner_1](./images/img_floor_division_2.x.png)\n",
+    "\n",
     "### ( `%` ) modulus\n",
     "\n",
     "Divides left hand operand by right hand operand and ___returns the remainder___."
@@ -351,7 +336,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<i>Can you guess the result if you print `c`?</i>"
+    "Can you guess the result if you print `c`?"
    ]
   },
   {
@@ -402,7 +387,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<i>Try it yourself! Print c!</i>"
+    "Try it yourself! Print c!"
    ]
   },
   {
@@ -453,7 +438,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<i>Try to print c below!</i>"
+    "Try to print c below!"
    ]
   },
   {
@@ -503,7 +488,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<i>See the example below and again, print c.</i>"
+    "See the example below and again, print c."
    ]
   },
   {
@@ -529,6 +514,7 @@
    "metadata": {},
    "source": [
     "### ( `**=` ) exponent AND\n",
+    "\n",
     "Performs exponential (power) calculation on operators and assign value to the left operand. \n",
     "\n",
     "For example:"
@@ -553,7 +539,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<i>Check out the example below an print c.</i>"
+    "Check out the example below an print c."
    ]
   },
   {
@@ -579,7 +565,9 @@
    "metadata": {},
    "source": [
     "### ( `//=` ) floor division AND\n",
+    "\n",
     "Performs floor division on operators and assign value to the left operand. \n",
+    "\n",
     "> As discussed earlier, in floor division, the division of operands will result to a quotient in which the digits after the decimal point are removed.\n",
     "\n",
     "For example:"
@@ -604,7 +592,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<i>Print c below to see the result.</i>"
+    "Print c below to see the result."
    ]
   },
   {
@@ -633,13 +621,8 @@
     "\n",
     "> _\"A boolean is like a light switch. It can only have two values. Just like a light switch can only be on or off, a boolean can only be True or False.\"_\n",
     "\n",
-    "Below are the boolean operations in ascending priority:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Below are the boolean operations in ascending priority:\n",
+    "\n",
     "### `or`\n",
     "\n",
     "It only evaluates the second argument if the first one is __False__.\n",
@@ -671,14 +654,8 @@
    "source": [
     "On the example above, the second condition which is the __color2 == \"orange\"__ was no longer evaluated because the first condition was already satisfied. Always remember that in __\"or\"__, only one condition needs to be satisfied to make it True.\n",
     "\n",
+    "Try changing the first condition to see what will happen.\n",
     "\n",
-    "Try changing the first condition to see what will happen."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### `and`\n",
     "\n",
     "It only evaluates the second argument if the first one is __True__.\n",
@@ -705,13 +682,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In __\"and\"__, both conditions should be met. If you change the conditions on the example above, none will be printed. Try it!  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "In __\"and\"__, both conditions should be met. If you change the conditions on the example above, none will be printed. Try it!\n",
+    "\n",
     "### `not`\n",
     "\n",
     "Using __\"not\"__ before a boolean expression inverts it. For the example, run the code below."
@@ -751,22 +723,11 @@
     "|    `not x`   | If `x` is false then `True`; else, `False`        |\n",
     "|   `x or y`   | If `x` is false then `y`; else, `x`               |\n",
     "|   `x and y`  | If `x` is false then`x`; else `y`                 |\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "\n",
     "## 4.1.4 Membership Operators\n",
     "\n",
-    "Python’s membership operators test for membership in a sequence, such as strings, lists, or tuples. There are two membership operators:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Python’s membership operators test for membership in a sequence, such as strings, lists, or tuples. There are two membership operators:\n",
+    "\n",
     "### `in`\n",
     "\n",
     "Evaluates to true if it finds a variable in the specified sequence and false otherwise."
@@ -819,13 +780,8 @@
    "source": [
     "## 4.1.5 Identity Operators\n",
     "\n",
-    "They are used to check if two values (or variables) are located on the same part of the memory. Two variables that are equal does not imply that they are identical."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "They are used to check if two values (or variables) are located on the same part of the memory. Two variables that are equal does not imply that they are identical.\n",
+    "\n",
     "### `is`\n",
     "\n",
     "Evaluates to True if the operands are identical (refer to the same object)"
@@ -876,14 +832,10 @@
     "\n",
     "> _\"These operators compare the values on either sides of them and decide the relation among them. They are also called Relational operators.\"_\n",
     "\n",
-    "In Python 3.x, comparisons are strict and will work only for compatible types. Otherwise, a `TypeError` is raised."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "In Python 3.x, comparisons are strict and will work only for compatible types. Otherwise, a `TypeError` is raised.\n",
+    "\n",
     "###  `==` \n",
+    "\n",
     "If the values of two operands are equal, then the condition becomes true. Print the code below to see the result."
    ]
   },
@@ -953,14 +905,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "_Note_: \n",
-    "> `!=` and `<>` both mean not equal by value in Python 2.x,  but `!=` is the preferred syntax in Python 2.x and the only supported option in Python 3.x."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "__Note:__\n",
+    "\n",
+    "> `!=` and `<>` both mean not equal by value in Python 2.x,  but `!=` is the preferred syntax in Python 2.x and the only supported option in Python 3.x.\n",
+    "\n",
     "## 4.1.7 Difference between `is` and `==`\n",
     "\n",
     "### `is`\n",
@@ -1021,13 +969,8 @@
    "source": [
     "# 4.2 [Delimiters](https://docs.python.org/3.5/reference/lexical_analysis.html#delimiters)\n",
     "\n",
-    "You'll also encounter a lot of delimiters in Python. One delimiter you won't see a lot is the semicolon (`;`). The line delimiter is completely optional in Python. Each data type has its own delimiter and these delimiters can be found in other places. Let's look at what some common delimiters mean."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "You'll also encounter a lot of delimiters in Python. One delimiter you won't see a lot is the semicolon (`;`). The line delimiter is completely optional in Python. Each data type has its own delimiter and these delimiters can be found in other places. Let's look at what some common delimiters mean.\n",
+    "\n",
     "## 4.2.1 `[ ]` (brackets)\n",
     "\n",
     "These represent __lists__ when it contains a series of values, or a __list comprehension__ when it contains an expression.\n",
@@ -1141,13 +1084,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is not an exhaustive list. The documentation will contain a comprehensive information on operators and delimiters."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "This is not an exhaustive list. The documentation will contain a comprehensive information on operators and delimiters.\n",
+    "\n",
     "## Summary\n",
     "\n",
     "Today, you have learned about the basic operators and delimiters in Python. Remember: Operators are the constructs which can manipulate the value of operands.\n",
