--- a/A_Beginner_1/03. Coding Style.ipynb
+++ b/A_Beginner_1/03. Coding Style.ipynb
@@ -4,24 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 03. Coding Style"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "# 03. Coding Style\n",
+    "\n",
     "## 3.1 Whitespace\n",
     "\n",
     "In Python, whitespace is used to structure code. Whitespace is important, so you have to be careful with how you use it.\n",
     "\n",
-    "I'll be showing some examples, but don't worry about the code just yet. I just want you to know the use of whitespaces. We'll tackle more about the codes you'll see below a little later."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "I'll be showing some examples, but don't worry about the code just yet. I just want you to know the use of whitespaces. We'll tackle more about the codes you'll see below a little later.\n",
+    "\n",
     "##### Avoid whitespaces in the following situations:\n",
     "\n",
     "- Immediately inside the parentheses, brackets, or braces"
@@ -125,14 +115,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For other rules, please click [here](https://docs.python.org/3/reference/lexical_analysis.html)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "For other rules, please click [here](https://docs.python.org/3/reference/lexical_analysis.html)\n",
+    "\n",
     "## 3.2 Indentation\n",
+    "\n",
     "Python provides no braces to indicate blocks of code for class and function definitions or flow control. Python programs get structured through indentation, i.e. code blocks are defined by their indentation. \n",
     "\n",
     "For example:"
@@ -156,7 +142,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b> Note:</b> Use 4 spaces per indentation level.\n",
+    "__Note:__\n",
+    "\n",
+    "Use 4 spaces per indentation level.\n",
     "\n",
     "So what would happen if the indentation is incorrect?\n",
     "Run the code below to find out!"
@@ -181,7 +169,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>```IndentationError: expected an indented block```</b>\n",
+    "__`IndentationError: expected an indented block`__\n",
     "\n",
     "We will get this error everytime our indentation is off. \n",
     "\n",
@@ -207,18 +195,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## 3.3 Comments\n",
     "\n",
     "Comments in Python are used to explain what the code does. \n",
     "\n",
     "### 3.3.1 Single-line comments\n",
+    "\n",
     "Single-line comments begin with the hash character (<b> ```#```</b> ) and are terminated by\n",
     "the end of line. Python is ignoring all text that comes after the # to the end of the line, \n",
     "they are not part of the command.  For example:"
@@ -242,7 +224,7 @@
     "### 3.3.2 Multi-line comments\n",
     "\n",
     "Comments spanning more than one line are achieved by inserting a multi-line string\n",
-    "(with <b>```\"\"\"```</b> or <b>```'''```</b> as the delimiter one each end) that is not used in assignment or \n",
+    "(with __`\"\"\"`__ or __`'''`__ as the delimiter one each end) that is not used in assignment or \n",
     "otherwise evaluated, but sits in between other statements.\n",
     "\n",
     "They are meant as documentation for anyone reading the code. "
@@ -275,13 +257,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## 3.4 Single-line Statements\n",
     "\n",
     "From the term itself, these are statements within a single line.\n",
@@ -298,20 +273,6 @@
    "outputs": [],
    "source": [
     "my_list = ['item1', 'item2', 'item3']"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    " \n",
-    " \n",
-    " \n",
-    " \n",
-    " \n",
-    " \n",
-    " \n",
-    " "
    ]
   },
   {
@@ -342,7 +303,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
     "Statements contained within the ```[ ]```, ```{ }```, or ```( )``` do not need to use the line continuation character.\n",
     "\n",
     "For example:"
@@ -366,16 +326,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.6 PEP 8"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## 3.6 PEP 8\n",
+    "\n",
     "PEP 8 is the official style guide for Python.\n",
     "\n",
-    "For the PEP 8 official documentation, please check this [link](https://www.python.org/dev/peps/pep-0008/).\n"
+    "For the PEP 8 official documentation, please check this [link](https://www.python.org/dev/peps/pep-0008/)."
    ]
   }
  ],
