--- a/A_Beginner_3/01. Loops and Iteration.ipynb
+++ b/A_Beginner_3/01. Loops and Iteration.ipynb
@@ -11,13 +11,8 @@
     "| __Loop Type__ |                                                             __Description__                                                             |\n",
     "|:-------------:|:---------------------------------------------------------------------------------------------------------------------------------------:|\n",
     "| while loop    | Repeats a statement or group of statements while a given condition is __TRUE__.  It tests the condition before executing the loop body. |\n",
-    "| for loop      | Executes a sequence of statements multiple times and abbreviates the code that manages the loop variable.                               |"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "| for loop      | Executes a sequence of statements multiple times and abbreviates the code that manages the loop variable.                               |\n",
+    "\n",
     "## 1.1 [While](https://docs.python.org/3.5/reference/compound_stmts.html#while)\n",
     "\n",
     "As mentioned, the `while` statement will loop for as long as the condition is true."
@@ -177,13 +172,8 @@
    "source": [
     "## 1.3 [Loop Control](https://docs.python.org/3.5/tutorial/controlflow.html#break-and-continue-statements-and-else-clauses-on-loops)\n",
     "\n",
-    "The `continue` and `break` statements let you have more control over looping behavior."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "The `continue` and `break` statements let you have more control over looping behavior.\n",
+    "\n",
     "### 1.3.1 Continue\n",
     "\n",
     "With `continue`, _the current iteration_ will no longer proceed and continues with the next iteration."
@@ -234,13 +224,8 @@
    "source": [
     "## 1.4 [Else](https://docs.python.org/3.5/tutorial/controlflow.html#break-and-continue-statements-and-else-clauses-on-loops)\n",
     "\n",
-    "Loop statements may have an else clause which execute when the loop is not terminated by a break statement."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Loop statements may have an else clause which execute when the loop is not terminated by a break statement.\n",
+    "\n",
     "With `for`, it is executed when the loop terminates through exhaustion of the list."
    ]
   },
