--- a/A_Beginner_3/02. Conditional Statements and Expressions.ipynb
+++ b/A_Beginner_3/02. Conditional Statements and Expressions.ipynb
@@ -6,13 +6,8 @@
    "source": [
     "# 2. Conditional Statements and Expressions\n",
     "\n",
-    "> In order to write useful programs, we almost always need the ability to check conditions and change the behavior of the program accordingly. Conditional statements give us this ability."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "> In order to write useful programs, we almost always need the ability to check conditions and change the behavior of the program accordingly. Conditional statements give us this ability.\n",
+    "\n",
     "# 2.1 If... elif... else\n",
     "\n",
     "Python's [`if`](https://docs.python.org/3.5/reference/compound_stmts.html#if) keyword can be used as part of a statement or as part of an expression.\n",
