--- a/A_Beginner_3/03. Exception Handling.ipynb
+++ b/A_Beginner_3/03. Exception Handling.ipynb
@@ -9,13 +9,7 @@
     "> An exception is an event, which occurs during the execution of a program that disrupts the normal flow of the program's instructions. In general, when a Python script encounters a situation that it cannot cope with, it raises an exception. An exception is a Python object that represents an error.\n",
     "\n",
     "> When a Python script raises an exception, it must either handle the exception immediately otherwise it terminates and quits.\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "\n",
     "## 3.1 [Try](https://docs.python.org/3.5/reference/compound_stmts.html#try)\n",
     "\n",
     "Even if the syntax is correct, a line of code may still produce an error. It doesn't mean the code wouldn't work. Python's `try` statement is used to handle [Exceptions](https://docs.python.org/3.5/reference/executionmodel.html#exceptions) detected during execution."
@@ -132,13 +126,8 @@
    "source": [
     "## 3.3 Else\n",
     "\n",
-    "The optional `else` clause executes if all the lines within the `try` clause execute without errors. Therefore, no exceptions occured. Being after the scope of the `try` statement, exceptions within the `else` clause are no longer handled by any `except` clause above it."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "The optional `else` clause executes if all the lines within the `try` clause execute without errors. Therefore, no exceptions occured. Being after the scope of the `try` statement, exceptions within the `else` clause are no longer handled by any `except` clause above it.\n",
+    "\n",
     "## 3.4 Finally\n",
     "\n",
     "There is an optional `finally` statement that executes after handling `except` and `else` clauses. Exceptions not handled within any clauses are temporarily saved. The `finally` clause is executed before re-raising unhandled exceptions unless it executes a `return` or `break` statement."
