--- a/A_Beginner_3/04. Defining and Calling Functions.ipynb
+++ b/A_Beginner_3/04. Defining and Calling Functions.ipynb
@@ -6,13 +6,8 @@
    "source": [
     "# 4. Defining and Calling Functions\n",
     "\n",
-    ">  Functions are little self-contained programs that perform a specific task, which you can incorporate into your own larger programs. After you have created a function, you can use it at any time, in any place. This saves you the time and effort of having to retell the computer what to do every time it does a common task."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    ">  Functions are little self-contained programs that perform a specific task, which you can incorporate into your own larger programs. After you have created a function, you can use it at any time, in any place. This saves you the time and effort of having to retell the computer what to do every time it does a common task.\n",
+    "\n",
     "## 4.1 Defining a Function\n",
     "\n",
     "The keyword `def` introduces a [function definition](https://docs.python.org/3.5/tutorial/controlflow.html#defining-functions). It's followed by the function name, parenthesized list of formal parameters, and ends with a colon. The indented statements below it are executed with the function name is called."
@@ -521,13 +516,8 @@
    "source": [
     "The dictionary we passed was unpacked and considered as if it was a bunch of keyword arguments passed to the function.\n",
     "\n",
-    "Notice how the keyword argument with a default value was overridden."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Notice how the keyword argument with a default value was overridden.\n",
+    "\n",
     "## 4.8 Lambda Functions\n",
     "\n",
     "Lambda functions are functions that are not bound to a name (but they can be assigned to a variable, giving them a name that lets you refer to it). Aside from not having a name, they also don't have a `return` statement. Instead, an expression is returned. A lambda function can only have one line of expression. It's a simple but powerful concept."
@@ -556,13 +546,8 @@
     "\n",
     "Common use cases would be for simple, one-time functions that can be thrown away. They can also be used for complex logic with lambda functions nested within each other or within other functinos. But using it this way sacrifices readability and makes it hard to debug compared to normal functions.\n",
     "\n",
-    "When should you use lambda functions? When you are into functional programming or only when you can't avoid it. In any case, normal functions will be more familiar, sufficient, easier to read and debug."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "When should you use lambda functions? When you are into functional programming or only when you can't avoid it. In any case, normal functions will be more familiar, sufficient, easier to read and debug.\n",
+    "\n",
     "## Late Binding\n",
     "\n",
     "Values of variables are looked up at the time when functions are called because Python's closures are late binding. Values are looked up when they are needed. When a returned function is called, the value returned is the value at call time (as opposed to when the function is defined, when default keyword arguments are provided). By then, based on the execution, the value is set as the final value."
