--- a/B_Intermediate_1/01. Basics of OOP in Python.ipynb
+++ b/B_Intermediate_1/01. Basics of OOP in Python.ipynb
@@ -15,13 +15,8 @@
     "\n",
     "There's usually a parenthesized list of derived class/es. **Usually**, because there is (or used to be?) an [old-style and new-style](https://docs.python.org/2/reference/datamodel.html#new-style-and-classic-classes) class. Old-style classes don't have this. Having said that, this notebook covers new-style classes since this is the [recommended way](https://wiki.python.org/moin/NewClassVsClassicClass) to create a class in Python.\n",
     "\n",
-    "__Note:__ We'll be defining a few classes. Some of the later classes will depend on the first few classes. The code needs to be executed in order from top to bottom. Just run the codes and proceed. :)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "__Note:__ We'll be defining a few classes. Some of the later classes will depend on the first few classes. The code needs to be executed in order from top to bottom. Just run the codes and proceed. :)\n",
+    "\n",
     "## 1.1 Defining a Class\n",
     "\n",
     "Python classes inherit from the built-in `object`.\n",
@@ -100,13 +95,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is the old style of defining classes. We'll focus on the new style and learn about the old style just so you're aware if ever you encounter it."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "This is the old style of defining classes. We'll focus on the new style and learn about the old style just so you're aware if ever you encounter it.\n",
+    "\n",
     "### 1.1.2 Introspection\n",
     "\n",
     "Let's go back to our (new style) class instance and see what `help()` can tell us about it."
@@ -154,13 +144,8 @@
    "source": [
     "These are our object's available attributes and methods inherited from `builtins.object` (see class definition from output of `help(cls)`).\n",
     "\n",
-    "There are times when our app needs to work with objects made by others. Introspection gives us a quick way of knowing more about these objects and be able to use them without even reading the source code."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "There are times when our app needs to work with objects made by others. Introspection gives us a quick way of knowing more about these objects and be able to use them without even reading the source code.\n",
+    "\n",
     "## 1.2 Docstrings\n",
     "\n",
     "Let's define a new `MyClass` that inherits from `YourClass` and add what's called a docstring and some attributes, then let's see how `help()` differs."
@@ -237,13 +222,8 @@
     "These are:\n",
     "\n",
     "* `__str__`\n",
-    "* `__init__`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "* `__init__`\n",
+    "\n",
     "### 1.3.1 `__str__`\n",
     "\n",
     "Before we modify `__str__`, let's look at the output when we print our instance."
@@ -304,13 +284,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `__str__` method returns the string representation of object instances. This can refer to object attributes and will return instance variables like `this.id` or `this.name`. This can be as simple as returning a string, an attribute or doing some string formatting."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "The `__str__` method returns the string representation of object instances. This can refer to object attributes and will return instance variables like `this.id` or `this.name`. This can be as simple as returning a string, an attribute or doing some string formatting.\n",
+    "\n",
     "### 1.3.2 `__init__`\n",
     "\n",
     "Sometimes we want our instances to do something on instantiation. It may be anything from processing data, calling functions or accepting arguments. Modifying `__init__` allows us to do exactly this.\n",
@@ -554,13 +529,8 @@
     "\n",
     "Another line of code was executed _after_ the original method.\n",
     "\n",
-    "Note that in Python 3, base class and type parameters are optional. What the code actually executes is `super(ThisClass, self).echo(arg)`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Note that in Python 3, base class and type parameters are optional. What the code actually executes is `super(ThisClass, self).echo(arg)`\n",
+    "\n",
     "The `super()` function is not restricted to your current object. You can use super on any of your object's parents or derived classes and on their methods. In the next example, note how we are using super on the object we are inheriting from."
    ]
   },
@@ -650,20 +620,15 @@
    "source": [
     "## 1.7 Packing/Unpacking Method Arguments\n",
     "\n",
-    "Packing and unpacking arguments and keyword arguments can be used in any function but it becomes more useful in class methods. Objects may be subclassed and methods may be overridden. These objects may be yours or from a 3rd party package you're using. This syntax allows objects to work without being restricted to predefined arguments and without external knowledge of other objects or data. It helps with preventing unintentionally breaking functionality."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Packing and unpacking arguments and keyword arguments can be used in any function but it becomes more useful in class methods. Objects may be subclassed and methods may be overridden. These objects may be yours or from a 3rd party package you're using. This syntax allows objects to work without being restricted to predefined arguments and without external knowledge of other objects or data. It helps with preventing unintentionally breaking functionality.\n",
+    "\n",
     "### Bringing it all together\n",
     "\n",
     "This notebook discussed several topics related to objects, from language-defined variables, single inheritance to multiple inheritance, to required, default and optional as well as starred arguments/keyword arguments, and some uses of the `super()` function. Each of the examples can easily be translated to real-life examples.\n",
     "\n",
     "You might consider using star arguments/keyword arguments pattern for high inter-operability with other objects while limiting the required knowledge about them. You will also find that methods that use this are easier to work with while letting data flow through an application. This pattern is common in mature frameworks.\n",
     "\n",
-    "Below are some example classes that could be in use within various parts of an example application. We don't know how they are being implemented but we are sure that the code won't break because new arguments need to be added. Other objects may be subclassing them, inheriting their properties and calling their methods, but our code will continue to function."
+    "Below are some example classes that could be used within various parts of an example application. We don't know how they are being implemented but we are sure that the code won't break because new arguments need to be added. Other objects may be subclassing them, inheriting their properties and calling their methods, but our code will continue to function."
    ]
   },
   {
