--- a/B_Intermediate_1/02. Virtual Environment.ipynb
+++ b/B_Intermediate_1/02. Virtual Environment.ipynb
@@ -8,37 +8,18 @@
     "\n",
     "A Virtual Environment is a tool to keep the dependencies required by different projects in separate places.\n",
     "\n",
-    "This has many uses. One of them, for example, is if you want to develop an app using Python 3.5 while also maintaining an app which requires Python 2.7. It will be possible if you will use a virtual environment to separate the two apps with two different Python versions. This way, you may happily create and maintain your apps without messing up the settings or configuration of each project. Basically, it keeps your global site-packages directory clean and manageable. \n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "This has many uses. One of them, for example, is if you want to develop an app using Python 3.5 while also maintaining an app which requires Python 2.7. It will be possible if you will use a virtual environment to separate the two apps with two different Python versions. This way, you may happily create and maintain your apps without messing up the settings or configuration of each project. Basically, it keeps your global site-packages directory clean and manageable. \n",
+    "\n",
     "### [__`virtualenv`__](https://virtualenv.pypa.io/en/latest/index.html) \n",
-    "It is a tool to create isolated Python environments. It has its own Python binary, dependencies, variables, etc."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "\n",
+    "It is a tool to create isolated Python environments. It has its own Python binary, dependencies, variables, etc.\n",
+    "\n",
     "## 2.1 Installation\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 2.1.1 For Python ver. < 3.3\n",
-    "Documentation: https://virtualenv.pypa.io/en/latest/index.html"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "\n",
+    "### For Python ver. < 3.3\n",
+    "\n",
+    "Documentation: https://virtualenv.pypa.io/en/latest/index.html\n",
+    "\n",
     "__To install:__\n",
     "   - `pip install virtualenv`\n",
     "\n",
@@ -50,21 +31,12 @@
     "\n",
     "__To deactivate your virtual environment:__\n",
     "\n",
-    "- `deactivate`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 2.1.2 For Python ver. >= 3.3\n",
-    "Documentation: https://docs.python.org/3/tutorial/venv.html"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "- `deactivate`\n",
+    "\n",
+    "### For Python ver. >= 3.3\n",
+    "\n",
+    "Documentation: https://docs.python.org/3/tutorial/venv.html\n",
+    "\n",
     "__To create a virtual environment:__\n",
     " - `python3 -m venv /path/to/new/virtual/environment`\n",
     "\n",
@@ -76,32 +48,8 @@
     "\n",
     "__To deactivate your virtual environment:__\n",
     "\n",
-    "- `deactivate`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 2.1.3 For Anaconda Users (Mac)\n",
+    "- `deactivate`\n",
     "\n",
-    "__To create a virtualenvironment:__ \n",
-    " \n",
-    "- `conda create -n virtualenv_name python=x.x anaconda`\n",
-    "\n",
-    "__To activate your virtual environment:__\n",
-    "\n",
-    "- `source activate your_env_name`\n",
-    "\n",
-    "__To deactivate your virtual environment:__\n",
-    "\n",
-    "- `source deactivate`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## 2.2 `virtualenvwrapper`\n",
     "\n",
     "A [__`virtualenvwrapper`__](http://docs.python-guide.org/en/latest/dev/virtualenvs/#virtualenvwrapper) provides a set of commands which makes working with virtual environments much more pleasant. It also places all your virtual environments in one place.\n",
@@ -114,22 +62,12 @@
     "> 5. User-configurable hooks for all operations ( see [Per-User Customization](https://virtualenvwrapper.readthedocs.org/en/latest/scripts.html#scripts) )\n",
     ">6. Plugin system for more creating sharable extensions ( see [Extending Virtualenvwrapper](https://virtualenvwrapper.readthedocs.org/en/latest/plugins.html#plugins) ).\n",
     "\n",
-    "__NOTE:__ [__`virtualenv`__](https://virtualenv.pypa.io/en/latest/index.html) is a prerequisite. \n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "__NOTE:__ [__`virtualenv`__](https://virtualenv.pypa.io/en/latest/index.html) is a prerequisite.\n",
+    "\n",
     "__To install (Linux):__\n",
     "   \n",
-    "`$ pip install virtualenvwrapper`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "`$ pip install virtualenvwrapper`\n",
+    "\n",
     "__Shell Startup:__\n",
     "> Add three lines to your shell startup file (`.bashrc`, `.profile`, etc.) to set the location where the virtual environments should live, the location of your development project directories, and the location of the script installed with this package:\n",
     "\n",
@@ -139,14 +77,10 @@
     "\n",
     "`source /usr/local/bin/virtualenvwrapper.sh`\n",
     "\n",
-    ">After editing it, reload the startup file (_e.g.,_ `run source ~/.bashrc`)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "> After editing it, reload the startup file (_e.g.,_ `run source ~/.bashrc`).\n",
+    "\n",
     "__QuickStart__\n",
+    "\n",
     "> 1. Run: `workon`\n",
     "> 2. A list of environments, empty, is printed.\n",
     "> 3. Run: `mkvirtualenv temp`\n",
