--- a/B_Intermediate_1/03. Importing Modules.ipynb
+++ b/B_Intermediate_1/03. Importing Modules.ipynb
@@ -12,27 +12,21 @@
     "\n",
     "> You can think of packages as the directories on a file system and modules as files within directories, but don’t take this analogy too literally since packages and modules need not originate from the file system. For the purposes of this documentation, we’ll use this convenient analogy of directories and files. Like file system directories, packages are organized hierarchically, and packages may themselves contain subpackages, as well as regular modules.\n",
     "\n",
-    "\n",
     "#### Pakcage\n",
     "\n",
     "> Python module which can contain submodules or recursively, subpackages. Technically, a package is a Python module with a `__path__` attribute.\n",
     "\n",
     "#### Module\n",
     "\n",
-    "> An object that serves as an organizational unit of Python code. Modules have a namespace containing arbitrary Python objects. Modules are loaded into Python by the process of importing."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "> An object that serves as an organizational unit of Python code. Modules have a namespace containing arbitrary Python objects. Modules are loaded into Python by the process of importing.\n",
+    "\n",
     "## 3.1.1 Modules\n",
     "\n",
     "While Python has many built-in modules, there are more 3rd party modules that you can use. You'll need to install or download them in order to use them.\n",
     "\n",
     "To import a module, just type `import module_name`.\n",
     "\n",
-    "### 3.1.1.1 [os.path](https://docs.python.org/3.5/library/os.path.html#module-os.path)\n",
+    "### [os.path](https://docs.python.org/3.5/library/os.path.html#module-os.path)\n",
     "\n",
     "You'll be using [`os.path`](https://docs.python.org/3.5/library/os.path.html#module-os.path) a lot when referring to your files since hardcoded paths will prevent your code from being portable."
    ]
@@ -141,14 +135,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`import` works with built-in and pip installed packages, modules as well as variables, functions and classes."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 3.1.1.2 [os.environ](https://docs.python.org/3.5/library/os.html#os.environ)\n",
+    "`import` works with built-in and pip installed packages, modules as well as variables, functions and classes.\n",
+    "\n",
+    "### [os.environ](https://docs.python.org/3.5/library/os.html#os.environ)\n",
     "\n",
     "There may be times when you want to set or retrieve environment variables for use in your application. These may be values you don't want to hardcode in your script for security or other purposes. `os.environ` lets us work with environment variables."
    ]
@@ -240,19 +229,14 @@
    "source": [
     "## 3.1.2 Local Packages\n",
     "\n",
-    "Import also works with local packages but there's one requirement - the [`__init__.py`](https://docs.python.org/3.5/tutorial/modules.html#packages) file.\n",
+    "Import also works with local packages but there's one requirement - the [**`__init__.py`**](https://docs.python.org/3.5/tutorial/modules.html#packages) file.\n",
     "\n",
     "> The `__init__.py` files are required to make Python treat the directories as containing packages; this is done to prevent directories with a common name, such as string, from unintentionally hiding valid modules that occur later on the module search path. In the simplest case, `__init__.py` can just be an empty file, but it can also execute initialization code for the package or...\n",
     "\n",
-    "And to use this in code, the \"**dotted name**\" is used.\n",
+    "And to use this in code, the \"__dotted name__\" is used.\n",
     "\n",
-    "![Folder image](./Images/folder.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "![Folder image](./Images/folder.png)\n",
+    "\n",
     "## 3.1.3 [Aliasing](https://www.python.org/dev/peps/pep-0221/)\n",
     "\n",
     "Aside from allowing us to use external code from modules, `import` also binds the module to a name in the local scope. Modules have the possibility of having the same name so is it possible to import modules with the same name?\n",
@@ -263,13 +247,8 @@
     "import numpy as np\n",
     "```\n",
     "\n",
-    "The `as` keyword can be used in with any single import. It does not work on `import *`."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "The `as` keyword can be used in with any single import. It does not work when using `import *`.\n",
+    "\n",
     "## 3.1.4 [Multiple Imports](https://www.python.org/dev/peps/pep-0328/)\n",
     "\n",
     "If you had to import multiple times from a single module, that can also be done in one line with the syntax:"
@@ -376,15 +355,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3.2 Common Modules\n",
+    "## 3.1.5 [`import *` and `__all__`](https://docs.python.org/3.5/tutorial/modules.html#importing-from-a-package)\n",
     "\n",
-    "Let's try more Python modules to give you a better idea about what you can do. We'll look at random and datetime. Then we'll look at modules related to the web, json and requests, with the latter being a 3rd party module used for http requests."
+    "Using `from package/module_name import *` imports all submodules or objects from the package into the current namespace. This is __not recommended__ since we usually don't know what's in there and it can make debugging difficult.\n",
+    "\n",
+    "In your modules, you can define `__all__` (as a name, not as a string) to control what can be imported from it when using `import *`. Packages can have this in its `__init__.py` file to serve as an index of modules. As a result, using `import *` only imports the names explicitly listed in `__all__`. However, `__all__` only affects `import *` and does not affect packages imported explicitly by their names."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# 3.2 Common Modules\n",
+    "\n",
+    "Let's try more Python modules to give you a better idea about what you can do. We'll look at random and datetime. Then we'll look at modules related to the web, json and requests, with the latter being a 3rd party module used for http requests.\n",
+    "\n",
     "## 3.2.1 `datetime`\n",
     "\n",
     "> The `datetim`e module supplies classes for manipulating dates. While date and time arithmetic is supported, the focus of the implementation is on efficient attribute extraction for output formatting and manipulation.\n",
@@ -450,14 +435,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Have you noticed how the output changed after running the code several times? But remember that it will only show numbers from 0 to 9. 10 is not included."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Have you noticed how the output changed after running the code several times? But remember that it will only show numbers from 0 to 9. 10 is not included.\n",
+    "\n",
     "##### [random.choice()](https://docs.python.org/3.5/library/random.html#random.choice)\n",
+    "\n",
     "> Return a random element from the non-empty sequence such as list and tuple. If sequence is empty, it raises [`IndexError`](https://docs.python.org/3.5/library/exceptions.html#IndexError)."
    ]
   },
@@ -477,15 +458,16 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "On the example above, we used tuple. If you run the code several times, the output will change as well. Output will only be limited from numbers 1-5 because the tuple that we created has only numbers 1-5 in it. Go ahead and try it using a list."
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "On the example above, we used tuple. If you run the code several times, the output will change as well. Output will only be limited from numbers 1-5 because the tuple that we created has only numbers 1-5 in it. Go ahead and try it using a list.\n",
+    "\n",
     "##### [random.random()](https://docs.python.org/3.5/library/random.html#random.random)\n",
+    "\n",
     "> Return the next random floating point number in the range `[0.0, 1.0)`."
    ]
   },
