--- a/B_Intermediate_2/01. Sets.ipynb
+++ b/B_Intermediate_2/01. Sets.ipynb
@@ -6,13 +6,8 @@
    "source": [
     "# 1. [Sets](https://docs.python.org/3.5/library/stdtypes.html#set)\n",
     "\n",
-    "A Set is an __unordered__ collection of __unique__ (no duplicate) objects. It can be used to perform mathematical set operations like union, intersection, symmetric difference, and etc."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "A Set is an __unordered__ collection of __unique__ (no duplicate) objects. It can be used to perform mathematical set operations like union, intersection, symmetric difference, and etc.\n",
+    "\n",
     "## 1.1 Creating a set\n",
     "\n",
     "If we want to create a set, we can call the built-in __`set()`__ function with a sequence or another iterable object:"
@@ -78,13 +73,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As expected, no doubles are in the result."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "As expected, no doubles are in the result.\n",
+    "\n",
     "#### NOTE: Since Python 2.6, we can define sets without using the built-in set function. \n",
     "\n",
     "We can use curly braces instead: "
