--- a/B_Intermediate_2/02. List, Set and Dictionary Comprehensions.ipynb
+++ b/B_Intermediate_2/02. List, Set and Dictionary Comprehensions.ipynb
@@ -340,13 +340,8 @@
    "source": [
     "Python 2.0 result:\n",
     "\n",
-    "![Intermediate_2](./images/img_python2_range.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "![Intermediate_2](./images/img_python2_range.png)\n",
+    "\n",
     "Set and dictionary comprehensions were not available in Python 2.x"
    ]
   }
