--- a/B_Intermediate_2/04. With statement.ipynb
+++ b/B_Intermediate_2/04. With statement.ipynb
@@ -15,22 +15,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "path_to_file = ''\n",
+    "path_to_file = '__file__'\n",
     "params = 'w'\n",
     "with open(path_to_file, params) as f:\n",
-    "    do_something()  # file is open in this block\n",
-    "do_something_else()  # file is already closed in this block"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The `with` statement automatically closes the file when the indented block finishes. It has the advantage of being shorter and readable than using a `try` statement."
+    "    help(f)  # file is open in this block\n",
+    "dir(f)  # file is already closed in this block"
    ]
   },
   {
@@ -39,9 +32,11 @@
     "collapsed": true
    },
    "source": [
+    "The `with` statement automatically closes the file when the indented block finishes. It has the advantage of being shorter and readable than using a `try` statement.\n",
+    "\n",
     "## 4.1 [Context Expressions and Managers](https://docs.python.org/3.5/reference/datamodel.html#with-statement-context-managers)\n",
     "\n",
-    "A context expression comes after the `with` statement. It handles the _entry into_ and _exit from_ the block of code being executed.\n",
+    "A context expression comes after the `with` statement. It handles the _entry into_ and _exit from_ the block of code being executed. The `__exit__` method is called at the end of execution no matter how the execution ends, even when an `Exception` is encountered.\n",
     "\n",
     "A Context Manager can be made to handle the execution context of the encapsulated block and be implemented as a class or a generator.\n",
     "\n",
@@ -114,7 +109,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `with` statement can get advanced really fast. We won't get deep into it right now. It's good to know that you won't encounter a lot of this in your code. When the time comes that you do, you have some idea about it."
+    "The `with` statement can get advanced really fast. We won't get deep into it right now. It's good to know that you won't encounter a lot of this in your code. When the time comes that you do, you have some idea about it.\n",
+    "\n",
+    "Here's another example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "from http import client\n",
+    "\n",
+    "class Timer(object):\n",
+    "    \"\"\" \"\"\"\n",
+    "    def __enter__(self):\n",
+    "        self.start = time.clock()\n",
+    "        return self\n",
+    "\n",
+    "    def __exit__(self, *args):\n",
+    "        self.end = time.clock()\n",
+    "        self.interval = self.end - self.start\n",
+    "\n",
+    "\n",
+    "with Timer() as t:\n",
+    "    conn = client.HTTPConnection('google.com')\n",
+    "    conn.request('GET', '/')\n",
+    "\n",
+    "print('The request took {:0.4f} seconds.'.format(t.interval))"
    ]
   }
  ],
