--- a/B_Intermediate_3/03. Best Practices.ipynb
+++ b/B_Intermediate_3/03. Best Practices.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "# 3. Best Practices\n",
     "\n",
+    "Most of these ideas are shared from Jeff Knupp's book [Idiomatic Python](http://jeffknupp.com/blog/2012/10/04/writing-idiomatic-python/). We highly recommend it book when learning Python.\n",
+    "\n",
     "## 3.1 PEP8\n",
     "\n",
     "Study [PEP8](https://www.python.org/dev/peps/pep-0008/) - Style Guide for Python Code\n",
